# rank

./: .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  docstring-template.txt  felipe.md  pyproject.toml  techs.txt
.github/scripts/: commit_lint.py  gen_changelog.py
.github/workflows/: commit-lint.yml  lint.yml  merge-scheduled.yml  tests.yml  update-deps.yml
app/: main.py
app/api/dependencies/: auth.py
app/api/v1/dependencies/: auth.py
app/api/v1/routers/: auth.py  category.py  country.py  user.py
app/core/: config.py
app/core/exceptions/: auth.py  base.py  db.py  handler.py
app/core/i18n/: manager.py
app/core/i18n/locales/: messages.pot
app/core/logging/: __init__.py  _config.py  _context.py  _formatters.py  config.py  logger.py
app/core/middlewares/: language.py  request_context.py
app/core/security/: jwt.py  password.py
app/domain/models/: __init__.py  base.py  category.py  city.py  country.py  refresh_token.py  review.py  review_response.py  reviewed_entity.py  state.py  suggestion.py  user.py  user_reviewed_entity.py
app/domain/schemas/: auth.py  base.py  category.py  collection_reponse.py  country.py  health.py  query_params.py  user.py
app/domain/usecases/: auth.py  category.py  country.py  user.py
app/infra/db/: manager.py  transaction.py
app/infra/repositories/: category.py  country.py  postgres.py  refresh_token.py  user.py
migrations/: env.py
migrations/versions/: 076e4e261e29_second.py  38fe99d1d531_third.py  91fde95bf761_initial.py
(+10 files in other folders)
