[project]
name = "rank-si"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "fastapi>=0.119.0",
    "pydantic[email]>=2.12.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "argon2-cffi>=25.1.0",
    "python-jose>=3.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "ruff>=0.14.3",
]
otel = [
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
]

[tool.ruff]
target-version = "py313"
line-length = 90
exclude = ["*.md"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "W191",  # Indentation contains tabs
    "E101",  # Mixed spaces and tabs (formatter fix already)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/env.py" = ["F403", "F405"]
